core/networkpolicies/kube-dns/egress-to-kube-dns.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-to-kube-dns
  namespace: kube-system
spec:
  endpointSelector: {}
  egress:
    - toServices:
        - k8sService:
            serviceName: kube-dns
            namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
