core/networkpolicies/kube-dns/kube-dns.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-dns
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9153"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube api
              protocol: TCP
    - toCIDR:
        - ${DNS_IP}/32
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
